--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,14 @@
     <string name="start">Get Started</string>
     <string name="info">Looking for information about COVID-19?\n Click here!</string>
     <string name="help">\?</string>
-    <string name="findLocation">Find a COVID-19 testing location near you.</string>
+    <string name="findLocation">Find a hospital or COVID-19 testing location near you.</string>
     <string name="link1">CDC Symptoms of COVID-19</string>
     <string name="link2">WHO Advice for the public</string>
     <string name="hospital">Nearby Hospitals</string>
+    <string name="testingloc">Nearby COVID-19 Testing</string>
+    <string-array name="symptomArray">
+        <item>Headache</item>
+        <item>Sore Throat</item>
+        <item>Upset Stomach</item>
+    </string-array>
 </resources>
