--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,30 @@
     <string name="hospital">Nearby Hospitals</string>
     <string name="testingloc">Nearby COVID-19 Testing</string>
     <string-array name="symptomArray">
+        <item>Abdominal Pain</item>
+        <item>Anxiety</item>
+        <item>Bleeding</item>
+        <item>Bloating</item>
+        <item>Breathing Difficulties</item>
+        <item>Chills</item>
+        <item>Convulsions</item>
+        <item>Cough</item>
+        <item>Dizziness</item>
+        <item>Fatigue</item>
+        <item>Fever</item>
+        <item>Heartburn</item>
         <item>Headache</item>
+        <item>Indigestion</item>
+        <item>Irritability</item>
+        <item>Nausea</item>
+        <item>Rash</item>
+        <item>Runny Nose</item>
         <item>Sore Throat</item>
+        <item>Sweatss</item>
+        <item>Swollen Lymph Nodes</item>
+        <item>Tiredness</item>
         <item>Upset Stomach</item>
+        <item>Vomiting</item>
+        <item>Weakness</item>
     </string-array>
 </resources>
